# aaronbassett-marketplace

./: .gitignore  README.md
.claude-plugin/: marketplace.json
docs/plans/: 2026-01-26-ci-validation-system-design.md  2026-01-26-ci-validation-system.md  2026-02-05-plugin-dependencies-design.md
plugins/bug-fixes/.claude-plugin/: plugin.json
plugins/constitution/: CHANGELOG.md  README.md
plugins/constitution/.claude-plugin/: plugin.json
plugins/constitution/agents/: constitution-reviewer.md
plugins/constitution/hooks/: hooks.json
plugins/dev-specialisms/.claude-plugin/: plugin.json
plugins/dev-specialisms/skills/init-local-tooling/assets/configs/python/: pyproject.toml
plugins/dev/.claude-plugin/: plugin.json
plugins/dev/agents/: python-expert.md  rust-dev.md  typescript-dev.md
plugins/devs/.claude-plugin/: plugin.json
plugins/devs/agents/: Explore.md  code-reviewer.md  python-expert.md  react-dev.md  rust-dev.md  typescript-dev.md
plugins/flutter-core/: .gitignore
plugins/flutter-core/.claude-plugin/: .lsp.json  plugin.json
plugins/flutter-core/agents/: flutter-architect.md  flutter-backend-specialist.md  flutter-performance-expert.md  flutter-platform-engineer.md  flutter-ui-specialist.md
plugins/flutter-core/commands/: flutter-analyze.md  flutter-build.md  flutter-new.md  flutter-upgrade.md
plugins/flutter-core/hooks/: hooks.json
plugins/frontend-vibes/examples/: bento-grid-layout.tsx  hero-section.tsx
plugins/frontend-vibes/references/: advanced-ascii-animation.md  component-libraries.md  motion-physics-guide.md
plugins/gh-cli/: .gitignore  README.md
plugins/gh-cli/.claude-plugin/: plugin.json
plugins/git-lovely/.claude-plugin/: plugin.json
plugins/readme-and-co/: .gitignore  LICENSES.md  README.md  TEMPLATES.md
plugins/readme-and-co/.claude-plugin/: plugin.json
plugins/readme-and-co/agents/: doc-generator.md
plugins/readme-and-co/commands/: create.md
plugins/readme-and-co/examples/: hook-config-example.md  readme-and-co.local.md
plugins/readme-and-co/scripts/: detect_project_info.py  fetch_licenses.py  populate_license.py  render_template.py  validate_templates.py  yaml_parser.py
plugins/sandbox/: .gitignore  README.md
plugins/sdd/: LICENSE  README.md
plugins/settings-presets/: .gitignore  README.md
plugins/useful-commits/: .gitignore  README.md
plugins/utils/: README.md
plugins/worktrees/: LICENSE  README.md
scripts/: add-plugin.sh  review-plugin.sh
scripts/ci/: commit.sh  validate.sh
scripts/lib/: atomic.sh  validation.sh
(+526 files in other folders)
